2022_Partner_Academy/AWS/DeployTestapp/nginx-file-browser/nginx-file-browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: handson-eks-alb
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx-file-bro
